--- a/templates/new_task.html
+++ b/templates/new_task.html
@@ -213,6 +213,85 @@
 			      </section>
 
 
+			      <section id="start-after-controller" style="display:none;">
+          			   <div class="col-lg-6 col-md-6 col-sm-6" >
+          			   	<br>
+
+			            <label class="label">Start after how many days</label>
+			            <label class="select">
+			              <select id="start-after" name="start-after" class="form-control" >
+			              	<option>0</option>
+			                <option>1</option>
+			                <option>2</option>
+			                <option>3</option>
+			                <option>4</option>
+			                <option>5</option>
+			                <option>6</option>
+			                <option>7</option>
+			                <option>8</option>
+			                <option>9</option>
+			                <option>10</option>
+			                <option>11</option>
+			                <option>12</option>
+			                <option>13</option>
+			                <option>14</option>
+			                <option>15</option>
+			                <option>16</option>
+			                <option>17</option>
+			                <option>18</option>
+			                <option>19</option>
+			                <option>20</option>
+			                <option>21</option>
+			                <option>22</option>
+			                <option>23</option>
+			                <option>24</option>
+			                <option>25</option>
+			                <option>26</option>
+			                <option>27</option>
+			                <option>28</option>
+			                <option>29</option>
+			                <option>30</option>
+			                <option>31</option>
+			                <option>32</option>
+			                <option>33</option>
+			                <option>34</option>
+			                <option>35</option>
+			                <option>36</option>
+			                <option>37</option>
+			                <option>38</option>
+			                <option>39</option>
+			                <option>40</option>
+			                <option>41</option>
+			                <option>42</option>
+			                <option>43</option>
+			                <option>44</option>
+			                <option>45</option>
+			                <option>46</option>
+			                <option>47</option>
+			                <option>48</option>
+			                <option>49</option>
+			                <option>50</option>
+			                <option>51</option>
+			                <option>52</option>
+			                <option>53</option>
+			                <option>54</option>
+			                <option>55</option>
+			                <option>56</option>
+			                <option>57</option>
+			                <option>58</option>
+			                <option>59</option>
+			                <option>60</option>
+			                
+			                
+			              </select>
+			              <i></i>
+			              <div class="note" id="start-after-helper">Enter after how many days to start the task - leaving blank would start immediately</div>
+			            </label>
+          			   </div>
+          			</section>
+			        
+
+
 			      </fieldset>
 			      <footer>
 			          <div class="form-actions">
@@ -347,24 +426,28 @@ function input_controller(obj)
 		$('#date-controller').css('display','none');
 		$('#day-of-week-controller').css('display','none');
 		$('#day-of-month-controller').css('display','none');
+		$('#start-after-controller').css('display','');
 	}
 	if(type=='One-Time')
 	{
 		$('#date-controller').css('display','');
 		$('#day-of-week-controller').css('display','none');
 		$('#day-of-month-controller').css('display','none');
+		$('#start-after-controller').css('display','none');
 	}
 	if(type=='Weekly')
 	{
 		$('#day-of-week-controller').css('display','');
 		$('#date-controller').css('display','none');
 		$('#day-of-month-controller').css('display','none');
+		$('#start-after-controller').css('display','');
 	}
 	if(type=="Monthly")
 	{
 		$('#day-of-month-controller').css('display','');
 		$('#day-of-week-controller').css('display','none');
 		$('#date-controller').css('display','none');
+		$('#start-after-controller').css('display','');
 	}
 
 }
